--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,13 +32,13 @@
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="PulseRate"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ble">
 
         <service
-            android:name="com.mafaz.ble.BluetoothLEService"
+            android:name=".BluetoothLEService"
             android:enabled="true"
             android:exported="true" />
         <activity android:name=".BatteryDetectorActivity">
